# rust-react-static-build

./: .gitignore  README.md  package-lock.json  package.json
public/: index.html
src/: App.tsx
wasm-lib/: Cargo.toml
wasm-lib/src/: julia_set.rs  lib.rs
