[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.88"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.65"
features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element"]

[profile.release]
lto = true